--- a/app/src/main/res/drawable/ic_local_music.xml
+++ b/app/src/main/res/drawable/ic_local_music.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FA2C56"
-        android:pathData="M6,19h4V5H6v14zm8-14v14h4V5h-4z"/>
+        android:fillColor="#FF2E5C"
+        android:pathData="M12 3v10.55A4 4 0 1 0 14 17V7h4V3h-6z M10 21a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"/>
 </vector> 
