--- a/app/src/main/res/drawable/ic_music_placeholder.xml
+++ b/app/src/main/res/drawable/ic_music_placeholder.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FA2C56"
-        android:pathData="M6,19h4V5H6v14zm8-14v14h4V5h-4z"/>
+        android:fillColor="#CCCCCC"
+        android:pathData="M12,3v10.55c-0.59,-0.34 -1.27,-0.55 -2,-0.55 -2.21,0 -4,1.79 -4,4s1.79,4 4,4 4,-1.79 4,-4V7h4V3h-6z"/>
 </vector> 
